# sst-rust-template

./: .gitignore  Cargo.toml  README.md  cargo-generate.toml  package.json  pnpm-lock.yaml  sst.config.ts  template.env  tsconfig.json
.cargo/: config.toml
.github/workflows/: deploy-prod.yml  test.yml
handlers/api/: main.rs
handlers/api/controllers/dev/: controller.rs  mod.rs
src/: lib.rs
src/controllers/: mod.rs
src/controllers/dev/: controller.rs  mod.rs
src/models/: record.rs
