[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 0
incremental = false
panic = "abort"
opt-level = 3       # 0-3
strip = 'symbols'   # strip symbols from binary
lto = true          # enable link time optimization

[dependencies]
anyhow = "1.0.75"
lambda-web = { version = "0.2.1", features = ["actix-web", "actix4"] }
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
serde = "1.0.188"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }

[[bin]]
name = "main"
path = "handlers/api/main.rs"
